@@ -46,19 +46,16 @@
 #include <ui/qt/extcap_options_dialog.h>
 
 ExtArgTimestamp::ExtArgTimestamp(extcap_arg * argument, QObject * parent) :
-    ExtcapArgument(argument, parent) {}
+    ExtcapArgument(argument, parent), tsBox(0) {}
 
 QWidget * ExtArgTimestamp::createEditor(QWidget * parent)
 {
-    QDateTimeEdit * tsBox;
     QString text = defaultValue();
 
-    if (_argument->pref_valptr && *_argument->pref_valptr)
+    if (_argument->pref_valptr && strlen(*_argument->pref_valptr))
     {
         QString storeValue(*_argument->pref_valptr);
-
-        if (storeValue.length() > 0 && storeValue.compare(text) != 0)
-            text = storeValue.trimmed();
+        text = storeValue.trimmed();
     }
 
 #if QT_VERSION >= QT_VERSION_CHECK(5, 8, 0)
@@ -118,16 +115,30 @@ QString ExtArgTimestamp::prefValue()
     return value();
 }
 
+bool ExtArgTimestamp::isSetDefaultValueSupported()
+{
+    return TRUE;
+}
+
+void ExtArgTimestamp::setDefaultValue()
+{
+    QDateTime t;
+
+#if QT_VERSION >= QT_VERSION_CHECK(5, 8, 0)
+    t = QDateTime::fromSecsSinceEpoch(defaultValue().toInt());
+#else
+    t = QDateTime::fromTime_t(defaultValue().toInt());
+#endif
+    tsBox->setDateTime(t);
+}
+
+
+
 ExtArgSelector::ExtArgSelector(extcap_arg * argument, QObject * parent) :
         ExtcapArgument(argument, parent), boxSelection(0) {}
 
 QWidget * ExtArgSelector::createEditor(QWidget * parent)
 {
-    int counter = 0;
-    int selected = -1;
-    const char *prefval = (_argument->pref_valptr && strlen(*_argument->pref_valptr)) ? *_argument->pref_valptr : NULL;
-    QString stored(prefval ? prefval : "");
-
     QWidget * editor = new QWidget(parent);
     QHBoxLayout * layout = new QHBoxLayout();
     QMargins margins = layout->contentsMargins();
@@ -144,19 +155,11 @@ QWidget * ExtArgSelector::createEditor(QWidget * parent)
         while (iter != values.constEnd())
         {
             boxSelection->addItem((*iter).value(), (*iter).call());
-
-            if (!prefval && (*iter).isDefault())
-                selected = counter;
-            else if (prefval && stored.compare((*iter).call()) == 0)
-                selected = counter;
-
-            counter++;
             ++iter;
         }
-
-        if (selected > -1 && selected < boxSelection->count())
-            boxSelection->setCurrentIndex(selected);
     }
+
+    setDefaultValue();
 
     if (reload())
     {
@@ -185,7 +188,7 @@ void ExtArgSelector::onReloadTriggered()
     int selected = -1;
 
     QString call = boxSelection->currentData().toString();
-    const char *prefval = _argument->pref_valptr ? *_argument->pref_valptr : NULL;
+    const char *prefval = (_argument->pref_valptr && strlen(*_argument->pref_valptr)) ? *_argument->pref_valptr : NULL;
     QString stored(prefval ? prefval : "");
     if (call != stored)
         stored = call;
@@ -241,14 +244,48 @@ QString ExtArgSelector::value()
     return data.toString();
 }
 
+bool ExtArgSelector::isSetDefaultValueSupported()
+{
+    return TRUE;
+}
+
+void ExtArgSelector::setDefaultValue()
+{
+    int counter = 0;
+    int selected = -1;
+
+    const char *prefval = (_argument->pref_valptr && strlen(*_argument->pref_valptr)) ? *_argument->pref_valptr : NULL;
+    QString stored(prefval ? prefval : "");
+
+    if (values.length() > 0)
+    {
+        ExtcapValueList::const_iterator iter = values.constBegin();
+
+        while (iter != values.constEnd())
+        {
+            if (!prefval && (*iter).isDefault())
+                selected = counter;
+            else if (prefval && stored.compare((*iter).call()) == 0)
+                selected = counter;
+
+            counter++;
+            ++iter;
+        }
+
+        if (selected > -1 && selected < boxSelection->count())
+            boxSelection->setCurrentIndex(selected);
+    }
+
+}
+
+
+
 ExtArgRadio::ExtArgRadio(extcap_arg * argument, QObject * parent) :
         ExtcapArgument(argument, parent), selectorGroup(0), callStrings(0) {}
 
 QWidget * ExtArgRadio::createEditor(QWidget * parent)
 {
-
     int count = 0;
-    bool anyChecked = false;
 
     selectorGroup = new QButtonGroup(parent);
     QWidget * radioButtons = new QWidget;
@@ -270,12 +307,6 @@ QWidget * ExtArgRadio::createEditor(QWidget * parent)
             QString callString = (*iter).call();
             callStrings->append(callString);
 
-            if ((*iter).isDefault())
-            {
-                radio->setChecked(true);
-                anyChecked = true;
-            }
-
             connect(radio, SIGNAL(clicked(bool)), SLOT(onBoolChanged(bool)));
             selectorGroup->addButton(radio, count);
 
@@ -286,9 +317,7 @@ QWidget * ExtArgRadio::createEditor(QWidget * parent)
         }
     }
 
-    /* No default was provided, and not saved value exists */
-    if (anyChecked == false && count > 0)
-        ((QRadioButton*)(selectorGroup->button(0)))->setChecked(true);
+    setDefaultValue();
 
     radioButtons->setLayout(vrLayout);
 
@@ -333,6 +362,39 @@ bool ExtArgRadio::isValid()
     return valid;
 }
 
+bool ExtArgRadio::isSetDefaultValueSupported()
+{
+    return TRUE;
+}
+
+void ExtArgRadio::setDefaultValue()
+{
+    int count = 0;
+    bool anyChecked = false;
+
+    if (values.length() > 0  )
+    {
+        ExtcapValueList::const_iterator iter = values.constBegin();
+
+        while (iter != values.constEnd())
+        {
+            if ((*iter).isDefault())
+            {
+                selectorGroup->button(count)->setChecked(true);
+                anyChecked = true;
+            }
+            count++;
+            ++iter;
+        }
+    }
+
+    /* No default was provided, and not saved value exists */
+    if (anyChecked == false && count > 0)
+        ((QRadioButton*)(selectorGroup->button(0)))->setChecked(true);
+}
+
+
+
 ExtArgBool::ExtArgBool(extcap_arg * argument, QObject * parent) :
         ExtcapArgument(argument, parent), boolBox(0) {}
 
@@ -349,7 +411,7 @@ QWidget * ExtArgBool::createEditor(QWidget * parent)
     if (_argument->tooltip != NULL)
         boolBox->setToolTip(QString().fromUtf8(_argument->tooltip));
 
-    const char *prefval = _argument->pref_valptr ? *_argument->pref_valptr : NULL;
+    const char *prefval = (_argument->pref_valptr && strlen(*_argument->pref_valptr)) ? *_argument->pref_valptr : NULL;
     if (prefval)
     {
         QRegularExpression regexp(EXTCAP_BOOLEAN_REGEX);
@@ -416,6 +478,18 @@ QString ExtArgBool::defaultValue()
     return defaultBool() ? QString("true") : QString("false");
 }
 
+bool ExtArgBool::isSetDefaultValueSupported()
+{
+    return TRUE;
+}
+
+void ExtArgBool::setDefaultValue()
+{
+    boolBox->setCheckState(defaultBool() ? Qt::Checked : Qt::Unchecked);
+}
+
+
+
 ExtArgText::ExtArgText(extcap_arg * argument, QObject * parent) :
     ExtcapArgument(argument, parent), textBox(0)
 {
@@ -425,12 +499,11 @@ QWidget * ExtArgText::createEditor(QWidget * parent)
 {
     QString text = defaultValue();
 
-    if (_argument->pref_valptr && *_argument->pref_valptr)
+    /* Prefs can contain empty string. We accept it. */
+    if (_argument->pref_valptr && (*_argument->pref_valptr))
     {
         QString storeValue(*_argument->pref_valptr);
-
-        if (storeValue.length() > 0 && storeValue.compare(text) != 0)
-            text = storeValue.trimmed();
+        text = storeValue.trimmed();
     }
 
     textBox = new QLineEdit(text, parent);
@@ -512,6 +585,18 @@ bool ExtArgText::isValid()
     return valid;
 }
 
+bool ExtArgText::isSetDefaultValueSupported()
+{
+    return TRUE;
+}
+
+void ExtArgText::setDefaultValue()
+{
+    textBox->setText(defaultValue());
+}
+
+
+
 ExtArgNumber::ExtArgNumber(extcap_arg * argument, QObject * parent) :
         ExtArgText(argument, parent) {}
 
@@ -519,12 +604,10 @@ QWidget * ExtArgNumber::createEditor(QWidget * parent)
 {
     QString text = defaultValue();
 
-    if (_argument->pref_valptr && *_argument->pref_valptr)
+    if (_argument->pref_valptr && strlen(*_argument->pref_valptr))
     {
         QString storeValue(*_argument->pref_valptr);
-
-        if (storeValue.length() > 0 && storeValue.compare(text) != 0)
-            text = storeValue;
+        text = storeValue;
     }
 
     textBox = (QLineEdit *)ExtArgText::createEditor(parent);
@@ -908,3 +991,13 @@ void ExtcapArgument::onBoolChanged(bool)
 {
     emit valueChanged();
 }
+
+bool ExtcapArgument::isSetDefaultValueSupported()
+{
+    return FALSE;
+}
+
+void ExtcapArgument::setDefaultValue()
+{
+}
+
