@@ -78,6 +78,8 @@ They previously shipped with Npcap 1.55.
 
 * It is possible to set extcap passwords on cli for tshark and other cli tools.
 
+* Extcap configuration dialog now supports and remembers empty strings. There are new buttons to reset a value back to default value.
+
 === Removed Features and Support
 
 * CMake: The options starting with DISABLE_something were renamed ENABLE_something for consistency.
